--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>delivery</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>delivery</name>
+	<packaging>war</packaging>
 	<description>Study project for DU IT college</description>
 
 	<properties>
