--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 #MySql properties:
-server.port=8080
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/delivery?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3306/delivery?serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 #hibernate properties:
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
