--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 #flyway properties
-spring.flyway.enabled=true
-spring.flyway.url=${SPRING_DATASOURCE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3306/delivery?serverTimezone=UTC}
-spring.flyway.user=${SPRING_DATASOURCE_USERNAME:root}
-spring.flyway.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.flyway.enabled=false
 
 
 
